force-app/main/default/objects/CIBE_PD__c/CIBE_PD__c.object-meta.xml
<CustomObject>
    <description>Tabla con los datos de conversión de Rating S&amp;P</description>
    <label>PD</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>