force-app/main/default/objects/CIBE_PD__c/fields/CIBE_FechaCarga__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaCarga__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha carga</label>
    <type>Date</type>
</CustomField>