force-app/main/default/objects/CIBE_PD__c/fields/CIBE_PDMax__c.field-meta.xml
<CustomField>
    <fullName>CIBE_PDMax__c</fullName>
    <label>PD Max</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>