force-app/main/default/objects/CIBE_PD__c/fields/CIBE_PDMin__c.field-meta.xml
<CustomField>
    <fullName>CIBE_PDMin__c</fullName>
    <description>Campo con los datos de conversión mínimos de Rating S&amp;P</description>
    <label>PD Min</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>